working popup for trat/scope, fixed text align for tabs

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -32,6 +32,7 @@ h2 {
 
 h3 {
   font-size: 150%;
+  padding-left: 0.3vw;
 }
 
 h4 {
@@ -59,6 +60,7 @@ h4 {
 .metatdata-panel {
   min-height: 230px;
   border: 1px solid #aeaeae;
+  padding-left: 1.2vw;
 }
 
 .vz-icon {
@@ -486,6 +488,14 @@ oj-table > table > tbody > tr {
   user-select: auto !important;
 }
 
+.padleftunit {
+  padding-left: 1vw;
+}
+
+#panelview {
+  margin-top: -1.4vw;
+}
+
 .activebtn {
   background-color: #fcfcfc !important;
   color: #222222;
@@ -553,6 +563,7 @@ oj-table > table > tbody > tr {
   border-left: 1px solid #aeaeae;
   border-top: 1px solid #aeaeae;
   border-right: 1px solid #aeaeae;
+  text-align: center;
 }
 
 .paneltabbed {
@@ -563,6 +574,7 @@ oj-table > table > tbody > tr {
 
 .borderbottom {
   border-bottom: 1px solid #aeaeae;
+  text-align: center;
 }
 
 .hide {
